# infinitum-agent

./: .gitignore  .gitmodules  DEBUG_REPORT.md  FULL_STACK_INTEGRATION.md  Makefile  README.md  deployment-info.txt  docker-compose.full-stack.yml  package-lock.json  pyproject.toml
backend/: .env.docker  Dockerfile  Infinitum_AI_Agent_API.postman_collection.json  README-vector-search.md  README.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  start-dev-docker.sh  test_vector_deployment.py
backend/app/: main.py  main_agent.py
backend/app/api/: packages.py  scrape.py  users.py
backend/app/core/: config.py  logging_config.py  logging_dashboard.py  middleware.py
backend/app/crew/: product_crew.py  tools.py
backend/app/db/: firestore_client.py
backend/app/services/: crawl4ai_service.py  package_templates.py  semantic_search_service.py  serpapi_service.py  user_context_service.py  vertex_ai.py
backend/config/: .env.example  .env.infra  README.md
backend/credentials/: .gitignore  README.md
backend/docs/: README.md
backend/docs/deployment/: vector-search-guide 2.md
backend/examples/: vector_search_example.py
backend/infra/: .env.docker  deploy-vector-search-simple.sh  deploy-vector-search.sh  docker-compose.yml  vector-index.yaml
backend/infrastructure/: README.md
backend/infrastructure/docker/: Dockerfile  docker-compose.yml
backend/infrastructure/gcp/: vector-index.yaml
backend/logs/: .gitignore  README.md
backend/scripts/: README.md
backend/scripts/deploy/: deploy-cloud-run.sh  deploy-vector-search-simple.sh
backend/scripts/utils/: test-vector-deployment.py
backend/src/infinitum/: main.py  settings.py
backend/src/infinitum/application/: __init__.py
backend/src/infinitum/application/commands/: __init__.py  search_products_command.py
backend/src/infinitum/application/commands/handlers/: __init__.py  search_products_handler.py
backend/src/infinitum/application/queries/: __init__.py  get_product_query.py
backend/src/infinitum/application/queries/handlers/: __init__.py  get_product_handler.py
backend/src/infinitum/application/services/: __init__.py  product_search_service.py  user_context_service.py
backend/src/infinitum/application/use_cases/: main_agent.py  product_crew.py  tools.py
backend/src/infinitum/config/: settings.py
backend/src/infinitum/core/: __init__.py
backend/src/infinitum/core/entities/: __init__.py  package.py  product.py  search_session.py  user.py
backend/src/infinitum/core/value_objects/: __init__.py  price.py  search_query.py  user_preferences.py
backend/src/infinitum/infrastructure/: logging_config.py  logging_dashboard.py  middleware.py
backend/src/infinitum/infrastructure/di/: container.py
backend/src/infinitum/infrastructure/external_services/: crawl4ai_service.py  embeddings_service.py  free_search_service.py  package_templates.py  semantic_search_service.py  serpapi_service.py  user_context_service.py  vector_index_service.py  vector_search_service.py  vertex_ai.py
backend/src/infinitum/infrastructure/http/: ai_chat.py  packages.py  scrape.py  users.py
backend/src/infinitum/infrastructure/monitoring/logging/: config.py  dashboard.py
backend/src/infinitum/infrastructure/persistence/: firestore_client.py
backend/src/infinitum/infrastructure/persistence/repositories/: product_repository.py
backend/src/infinitum/infrastructure/web/api/v1/: chat.py  packages.py  search.py  search_new.py  users.py
backend/src/infinitum/infrastructure/web/middleware/: auth_middleware.py  logging_middleware.py
backend/src/infinitum/shared/: __init__.py
backend/src/infinitum/shared/exceptions/: __init__.py
backend/src/infinitum/shared/interfaces/: __init__.py  repositories.py  services.py
backend/tests/: demo_vertex_ai_dummy_data.py  test_crawl4ai_service.py  test_dummy_data_only.py  test_vector_search.py  test_vertex_ai.py  test_vertex_ai_with_dummy_data.py
backend/tests/dummy_data/: README.md  SUMMARY.md  __init__.py
infra/: cloud-run-service.yaml  cloud-run.tf  deploy-cloud-run.sh
scripts/: deploy-full-stack.sh  test-integration.sh
