[project]
name = "infinitum-ai-agent"
version = "0.1.0"
description = "Infinitum AI Agent Backend"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "firebase-admin (<7.0.0)",
    "google-cloud-aiplatform (>=1.105.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
